updated welcome email templates to use usernames and emails. updated word wrap css style to avoid column clipping.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,6 +25,7 @@ body
   font-family: 'Exo 2', sans-serif
   font-weight: 400
   font-size: 18px
+  word-wrap: break-word
 
 .navbar-brand
   font-family: 'Oswald', sans-serif
